# auto-reuse

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  REUSE.toml  new_version_tag.py  pyproject.toml
src/auto_reuse/: __init__.py
src/copyright/: __init__.py
