[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-reuse"
version = "0.3"
description = "pre-commit hook to add missing copyright information"
authors = [
    { name = "Karl Wette", email = "karl.wette@anu.edu.au" },
]
requires-python = ">=3.10"
dependencies = [
    "license-expression>=30.4",
    "reuse>=5.0",
    "tomlkit>=0.13",
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSES/MIT.txt"]

[project.scripts]
auto-reuse = "auto_reuse:cli"

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "EM",
    "F",
]

[tool.ppqs.defaults]
print-header = true

[tool.ppqs.scripts.init]
description = "Initialise project"
script = """
python -m pip install pre-commit>=3.7
pre-commit install
"""

[tool.ppqs.scripts.lint]
description = "Perform linting checks"
script = """
pre-commit run -a
pre-commit try-repo . auto-reuse
"""

[tool.ppqs.scripts.clean]
description = "Clean up build files"
script = "git clean -Xdf"
