[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "copyright"
version = "0.11"
description = "pre-commit hook to add missing copyright information"
authors = [
    { name = "Karl Wette", email = "karl.wette@anu.edu.au" },
]
requires-python = ">=3.10"
dependencies = [
    "license-expression>=30.4",
    "reuse>=5.0",
    "tomlkit>=0.13",
]
readme = "README.md"
license = "MIT"
license-files = [
    'LICENSES/MIT.txt',
    'LICENSES/CC0-1.0.txt',
]

[project.scripts]
copyright = "copyright:main"

[tool.ruff]
fix = true
show-fixes = true

[tool.ruff.lint]
select = [
    "D1", "D2", "D4",
    "E4", "E7", "E9",
    "EM",
    "F",
    "I",
]
ignore = [
    "D105", "D202",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ppqs.defaults]
print-header = true

[tool.ppqs.scripts.init]
description = "Initialise project"
script = """
python -m pip install pre-commit>=3.7
pre-commit install
"""

[tool.ppqs.scripts.lint]
description = "Perform linting checks"
script = """
pre-commit run -a
pre-commit try-repo . copyright
"""

[tool.ppqs.scripts.upload]
description = "Upload package"
script = """
ppqs lint
git push origin
git push origin --tags
"""

[tool.ppqs.scripts.clean]
description = "Clean up build files"
script = "git clean -Xdf"
